# modbus-server

./: .gitignore  BUILD.md  CMakeLists.txt  Makefile  README.md  build-linux.sh  build-windows.bat  json-modbus-server.c  modbus_config.json  test-client.ps1
.github/workflows/: build.yml
src/: main.c
src/adapters/: modbus_backend.c  modbus_backend.h  rtu_adapter.c  rtu_adapter.h  tcp_adapter.c  tcp_adapter.h
src/config/: config.h  config_loader.c
src/core/: server_controller.c  server_controller.h
src/json/: json_command.c  json_command.h
src/utils/: byte_order.c  byte_order.h  logging.h  platform.c  platform.h
